<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|top"
            android:orientation="horizontal"
            android:padding="7dp">

            <TextView
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/paiement_non_s_curis"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cardImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToOutline="true"
                android:padding="7dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/cardName"
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/cardPrice"
                    style="@style/Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/cardRarity"
                    style="@style/Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:text="@string/carte_bancaire" />

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="2dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/payment_cb_drawable" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/payment_visa_drawable" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/payment_mastercard_drawable" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/payment_maestro_drawable" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/payment_amex_drawable" />

                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/cardNumber"
                style="@style/Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num_ro_de_la_carte"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/cardExpiry"
                style="@style/Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_d_expiration"
                android:inputType="datetime" />

            <EditText
                android:id="@+id/cardCVV"
                style="@style/Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cryptogramme_visuel"
                android:inputType="numberPassword" />

            <EditText
                android:id="@+id/cardHolderName"
                style="@style/Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom_du_titulaire"
                android:inputType="text" />

            <TextView
                android:id="@+id/errorMessage"
                style="@style/Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="7dp"
                android:text="@string/information_erron_e"
                android:textColor="@color/red"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/specialCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/autre_mode_de_paiement" />

                <CheckBox
                    android:id="@+id/specialCheckBox"
                    style="@style/Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/specialChamp"
                    android:textSize="7dp" />
            </LinearLayout>

            <Button
                android:id="@+id/buyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/payer" />

            <TextView
                android:id="@+id/condition"
                style="@style/Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:text="@string/condition"
                android:textSize="6dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:background="@color/white"
        android:src="@drawable/logo_exit_button_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>